[gd_scene load_steps=34 format=2]

[ext_resource path="res://Player/PlayerPhysicsMaterial.phymat" type="PhysicsMaterial" id=1]
[ext_resource path="res://Player/Scripts/PlayerController.gd" type="Script" id=2]
[ext_resource path="res://Player/Scripts/DragRay.gd" type="Script" id=3]
[ext_resource path="res://Player/Scripts/InteractRay.gd" type="Script" id=4]
[ext_resource path="res://Player/Scripts/HUDRay.gd" type="Script" id=5]
[ext_resource path="res://Player/Scripts/FootstepAudioPlayer.gd" type="Script" id=6]
[ext_resource path="res://Player/Audios/Footstep1.wav" type="AudioStream" id=7]
[ext_resource path="res://Player/Audios/Footstep2.wav" type="AudioStream" id=8]
[ext_resource path="res://Player/Audios/Footstep3.wav" type="AudioStream" id=9]
[ext_resource path="res://Player/Audios/Footstep4.wav" type="AudioStream" id=10]
[ext_resource path="res://Player/Scripts/JumpAudioPlayer.gd" type="Script" id=11]
[ext_resource path="res://Assets/Fonts/OldStandardItalic.tres" type="DynamicFont" id=12]
[ext_resource path="res://Player/Textures/Crosshair.png" type="Texture" id=13]
[ext_resource path="res://Player/Scripts/PixelizeController.gd" type="Script" id=14]
[ext_resource path="res://Shaders/pixelize.shader" type="Shader" id=15]
[ext_resource path="res://Player/Scripts/PausePopup.gd" type="Script" id=16]
[ext_resource path="res://Assets/Fonts/Theme1.tres" type="Theme" id=17]
[ext_resource path="res://Assets/Audios/PhoneButton1.wav" type="AudioStream" id=18]
[ext_resource path="res://Player/Textures/PaperPage1.png" type="Texture" id=19]
[ext_resource path="res://Player/Scripts/Flashlight.gd" type="Script" id=20]
[ext_resource path="res://Prefabs/PlayerSmokingHands1.tscn" type="PackedScene" id=21]
[ext_resource path="res://Player/Scripts/ColorMatteController.gd" type="Script" id=22]
[ext_resource path="res://Player/Textures/PhoneScreen1.png" type="Texture" id=23]
[ext_resource path="res://Player/Textures/PhoneScreenNotification1.png" type="Texture" id=24]
[ext_resource path="res://Assets/Fonts/Theme2.tres" type="Theme" id=25]
[ext_resource path="res://Player/Textures/PhoneScreen4.png" type="Texture" id=26]
[ext_resource path="res://Player/Textures/PhoneScreen2.png" type="Texture" id=27]
[ext_resource path="res://Player/Textures/PhoneScreen5.png" type="Texture" id=28]
[ext_resource path="res://Player/Textures/PhoneScreen3.png" type="Texture" id=29]
[ext_resource path="res://Player/Scripts/HUDController.gd" type="Script" id=30]

[sub_resource type="CapsuleShape" id=1]
radius = 0.35
height = 1.1

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 15 )
shader_param/size_x = 0.002
shader_param/size_y = 0.003

[sub_resource type="NoiseTexture" id=3]
width = 16
height = 16

[node name="Player" type="RigidBody"]
collision_layer = 7
collision_mask = 7
physics_material_override = ExtResource( 1 )
custom_integrator = true
can_sleep = false
axis_lock_angular_x = true
axis_lock_angular_z = true
linear_damp = 120.0
angular_damp = 120.0
script = ExtResource( 2 )

[node name="RotationHelper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )

[node name="Camera" type="Camera" parent="RotationHelper"]
doppler_tracking = 2
current = true
near = 0.04
far = 600.0

[node name="DragRay" type="RayCast" parent="RotationHelper"]
enabled = true
cast_to = Vector3( 0, 0, -1.95 )
collision_mask = 7
script = ExtResource( 3 )
max_drag_distance = 1.6
min_drag_distance = 0.6

[node name="DragPoint" type="Position3D" parent="RotationHelper/DragRay"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.95 )

[node name="InteractRay" type="RayCast" parent="RotationHelper"]
enabled = true
cast_to = Vector3( 0, 0, -1.95 )
collision_mask = 7
collide_with_areas = true
script = ExtResource( 4 )

[node name="HUDRay" type="RayCast" parent="RotationHelper"]
enabled = true
cast_to = Vector3( 0, 0, -1.95 )
collision_mask = 7
collide_with_areas = true
script = ExtResource( 5 )

[node name="Flashlight" type="SpotLight" parent="RotationHelper"]
transform = Transform( 0.999657, 0.000913563, 0.0261611, 0, 0.999391, -0.0348995, -0.026177, 0.0348875, 0.999048, 0.1, -0.15, 0.05 )
visible = false
light_color = Color( 0.964706, 1, 0.784314, 1 )
light_energy = 2.0
shadow_enabled = true
shadow_bias = 0.0
shadow_reverse_cull_face = true
spot_range = 7.0
spot_attenuation = 3.0
spot_angle = 60.0
spot_angle_attenuation = 0.4
script = ExtResource( 20 )

[node name="FlashlightAudioPlayer3D" type="AudioStreamPlayer3D" parent="RotationHelper/Flashlight"]
transform = Transform( 1, 4.65661e-10, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, -0.045, 0.1, -0.045 )
stream = ExtResource( 18 )
unit_db = -48.0
max_db = -16.0

[node name="FootstepAudioPlayer3D" type="AudioStreamPlayer3D" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0500011 )
unit_db = -64.0
max_db = -18.0
script = ExtResource( 6 )
footstep_sounds = [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ]
walk_period = 0.6
run_period = 0.4

[node name="JumpAudioPlayer3D" type="AudioStreamPlayer3D" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0500011 )
unit_db = -56.0
max_db = -16.0
script = ExtResource( 11 )
jump_sounds = [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ]

[node name="PlayerSmokingHands1" parent="RotationHelper" instance=ExtResource( 21 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.8, 0 )

[node name="BodyCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="FloorRay" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.55, 0 )
enabled = true
cast_to = Vector3( 0, -0.55, 0 )
collision_mask = 7

[node name="StairsRay" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.35, -0.42 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 7

[node name="CeilingRay" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 1.45, 0 )
collision_mask = 7

[node name="Pixelize" type="TextureRect" parent="."]
visible = false
material = SubResource( 2 )
anchor_top = -0.389
anchor_right = 1.0
anchor_bottom = 1.389
margin_top = 0.119995
margin_right = 0.00012207
margin_bottom = -0.119873
texture = SubResource( 3 )
expand = true
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 17 )
script = ExtResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="TextureRect" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
rect_pivot_offset = Vector2( 4, 4 )
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -453.0
margin_top = -64.0
margin_right = 453.0
margin_bottom = -11.0
grow_vertical = 0
text = "HINT: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Odi et amo. Quare id faciam, fortasse requiris. Nescio, sed fieri. Sentio et excrucior."
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitles" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -452.0
margin_top = -176.0
margin_right = 453.0
margin_bottom = -62.0
grow_vertical = 0
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausePopup" type="Popup" parent="HUD"]
pause_mode = 2
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 50, 50 )
popup_exclusive = true
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}
phone_texture_list = [ ExtResource( 23 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 26 ), ExtResource( 28 ) ]

[node name="PauseMenu" type="Control" parent="HUD/PausePopup"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DarkBackground" type="ColorRect" parent="HUD/PausePopup/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.54902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenuTitle" type="Label" parent="HUD/PausePopup/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -65.0
margin_right = 282.0
margin_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 12 )
text = "PAUSE_MENU_TITLE"
align = 1

[node name="ContinueButton" type="Button" parent="HUD/PausePopup/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -13.0
margin_right = 203.0
margin_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbour_top = NodePath("../Quit Button")
focus_neighbour_bottom = NodePath("../Quit Button")
text = "PAUSE_MENU_CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="HUD/PausePopup/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.0
margin_top = 22.0
margin_right = 192.0
margin_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbour_top = NodePath("../Continue Button")
focus_neighbour_bottom = NodePath("../Continue Button")
text = "PAUSE_MENU_MAIN_MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="HUD/PausePopup/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.0
margin_top = 57.0
margin_right = 191.0
margin_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbour_top = NodePath("../Continue Button")
focus_neighbour_bottom = NodePath("../Continue Button")
text = "PAUSE_MENU_QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillsMenu" type="Control" parent="HUD/PausePopup"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DarkBackground" type="ColorRect" parent="HUD/PausePopup/SkillsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.54902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillsMenuTitle" type="Label" parent="HUD/PausePopup/SkillsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -65.0
margin_right = 282.0
margin_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 12 )
text = "SKILLS_MENU_TITLE"
align = 1

[node name="Loneliness" type="Label" parent="HUD/PausePopup/SkillsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = -13.0
margin_right = 175.0
margin_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "SKILLS_MENU_LONELINESS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LonelinessValue" type="Label" parent="HUD/PausePopup/SkillsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = -13.0
margin_right = 175.0
margin_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "999"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Corporeality" type="Label" parent="HUD/PausePopup/SkillsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = 22.0
margin_right = 175.0
margin_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
text = "SKILLS_MENU_CORPOREALITY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorporealityValue" type="Label" parent="HUD/PausePopup/SkillsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = 22.0
margin_right = 175.0
margin_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
text = "999"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reflexion" type="Label" parent="HUD/PausePopup/SkillsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = 57.0
margin_right = 175.0
margin_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
text = "SKILLS_MENU_REFLEXION"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReflexionValue" type="Label" parent="HUD/PausePopup/SkillsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = 57.0
margin_right = 175.0
margin_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
text = "999"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BookMenu" type="Control" parent="HUD/PausePopup"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DarkBackground" type="ColorRect" parent="HUD/PausePopup/BookMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.54902 )

[node name="PageTexture" type="TextureRect" parent="HUD/PausePopup/BookMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -340.0
margin_top = -257.0
margin_right = 337.0
margin_bottom = 261.0
rect_pivot_offset = Vector2( 391.5, 387.5 )
texture = ExtResource( 19 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BookTitle" type="Label" parent="HUD/PausePopup/BookMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -198.0
margin_top = -233.0
margin_right = 197.0
margin_bottom = -170.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.152941, 0.117647, 0.101961, 1 )
custom_fonts/font = ExtResource( 12 )
text = "Book Title • Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit Consectetur Adipiscing Elit Consectetur Adipiscing Elit "
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BookText" type="RichTextLabel" parent="HUD/PausePopup/BookMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.0
margin_top = -159.0
margin_right = 183.0
margin_bottom = 189.0
custom_colors/default_color = Color( 0.152941, 0.117647, 0.101961, 1 )
bbcode_enabled = true
bbcode_text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Odi et amo, quare id faciam, fortasse requiris. Nescio, sed fieri, sentio et excrucior. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Odi et amo, quare id faciam, fortasse requiris. Nescio, sed fieri, sentio et excrucior. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Odi et amo, quare id faciam, fortasse requiris. Nescio, sed fieri, sentio et excrucior. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Odi et amo, quare id faciam, fortasse requiris. Nescio, sed fieri, sentio et excrucior. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Odi et amo, quare id faciam, fortasse requiris. Nescio, sed fieri, sentio et excrucior. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Odi et amo, quare id faciam, fortasse requiris. Nescio, sed fieri, sentio et excrucior. "
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Odi et amo, quare id faciam, fortasse requiris. Nescio, sed fieri, sentio et excrucior. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Odi et amo, quare id faciam, fortasse requiris. Nescio, sed fieri, sentio et excrucior. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Odi et amo, quare id faciam, fortasse requiris. Nescio, sed fieri, sentio et excrucior. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Odi et amo, quare id faciam, fortasse requiris. Nescio, sed fieri, sentio et excrucior. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Odi et amo, quare id faciam, fortasse requiris. Nescio, sed fieri, sentio et excrucior. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Odi et amo, quare id faciam, fortasse requiris. Nescio, sed fieri, sentio et excrucior. "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="HUD/PausePopup/BookMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -198.0
margin_top = 207.0
margin_right = 197.0
margin_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbour_top = NodePath("../Quit Button")
focus_neighbour_bottom = NodePath("../Quit Button")
custom_colors/font_color_disabled = Color( 0.152941, 0.117647, 0.101961, 0.901961 )
custom_colors/font_color_focus = Color( 0.152941, 0.117647, 0.101961, 0.94902 )
custom_colors/font_color = Color( 0.152941, 0.117647, 0.101961, 0.901961 )
custom_colors/font_color_hover = Color( 0.152941, 0.117647, 0.101961, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.054902, 0.0470588, 1 )
text = "PAUSE_MENU_CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhoneMenu" type="Control" parent="HUD/PausePopup"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DarkBackground" type="ColorRect" parent="HUD/PausePopup/PhoneMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.54902 )

[node name="PhoneTexture" type="TextureRect" parent="HUD/PausePopup/PhoneMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -295.0
margin_top = -282.0
margin_right = 292.0
margin_bottom = 286.0
rect_pivot_offset = Vector2( 391.5, 387.5 )
texture = ExtResource( 23 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HUD/PausePopup/PhoneMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = -135.0
margin_right = 94.0
margin_bottom = -72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control1" type="Control" parent="HUD/PausePopup/PhoneMenu/MarginContainer"]
margin_right = 191.0
margin_bottom = 102.0

[node name="MarginContainer" type="MarginContainer" parent="HUD/PausePopup/PhoneMenu/MarginContainer/Control1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7.0
margin_top = -7.0
margin_right = 7.0
margin_bottom = 7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="HUD/PausePopup/PhoneMenu/MarginContainer/Control1/MarginContainer"]
margin_right = 205.0
margin_bottom = 116.0
rect_min_size = Vector2( 5, 5 )
texture = ExtResource( 24 )
region_rect = Rect2( 0, 0, 64, 64 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="HUD/PausePopup/PhoneMenu/MarginContainer"]
margin_right = 191.0
margin_bottom = 102.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="HUD/PausePopup/PhoneMenu/MarginContainer/Control2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -154.0
margin_top = 17.0
margin_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbour_top = NodePath("../Quit Button")
focus_neighbour_bottom = NodePath("../Quit Button")
text = "PAUSE_MENU_CONTINUE"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhoneText" type="RichTextLabel" parent="HUD/PausePopup/PhoneMenu/MarginContainer"]
margin_right = 191.0
margin_bottom = 102.0
rect_min_size = Vector2( 100, 63 )
bbcode_enabled = true
bbcode_text = "[b]GAIUS CATULLUS[/b]

Odi et amo. Quare id faciam, fortasse requiris.
Nescio, sed fieri sentio
et excrucior."
text = "GAIUS CATULLUS

Odi et amo. Quare id faciam, fortasse requiris.
Nescio, sed fieri sentio
et excrucior."
fit_content_height = true
scroll_active = false

[node name="ColorMatte" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ColorMatte"]

[node name="LoadingScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackScreen" type="ColorRect" parent="LoadingScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingLabel" type="Label" parent="LoadingScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -231.0
margin_right = 230.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 12 )
text = "LOADING"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HUD/PausePopup/PauseMenu/ContinueButton" to="HUD/PausePopup" method="_on_Continue_Button_pressed"]
[connection signal="pressed" from="HUD/PausePopup/PauseMenu/MainMenuButton" to="HUD/PausePopup" method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="HUD/PausePopup/PauseMenu/QuitButton" to="HUD/PausePopup" method="_on_Quit_Button_pressed"]
[connection signal="pressed" from="HUD/PausePopup/BookMenu/ContinueButton" to="HUD/PausePopup" method="_on_Continue_Button_pressed"]
[connection signal="pressed" from="HUD/PausePopup/PhoneMenu/MarginContainer/Control2/ContinueButton" to="HUD/PausePopup" method="_on_Continue_Button_pressed"]
